--- a/1_Projet_COVID_premier_prototype.ipynb
+++ b/1_Projet_COVID_premier_prototype.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
     "                                   rotation_range=15,                   # le plus important\n",
     "                                   width_shift_range=0.02,\n",
     "                                   height_shift_range=0.02,\n",
-    "                                   brightness_range = [0.9, 1.1],       # avant ou après le rescale ?\n",
+    "#                                   brightness_range = [0.9, 1.1],       # avant ou après le rescale ?\n",
     "                                   horizontal_flip=False,               # pas de flip pour des images médicales\n",
     "                                   fill_mode='nearest')\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)"
@@ -621,6 +621,94 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = keras.models.load_model('premier_prototype.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pred = classifier.predict(test_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25/25 [==============================] - 6s 235ms/step - loss: 0.0972 - accuracy: 0.9717\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'loss': 0.0972433015704155, 'accuracy': 0.9717223644256592}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.evaluate(test_set, return_dict=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pred_class = test_pred.argmax(axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.34      0.34      0.34       266\n",
+      "           1       0.31      0.31      0.31       233\n",
+      "           2       0.37      0.37      0.37       279\n",
+      "\n",
+      "    accuracy                           0.34       778\n",
+      "   macro avg       0.34      0.34      0.34       778\n",
+      "weighted avg       0.34      0.34      0.34       778\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(metrics.classification_report(data_test.Class.astype(int), test_pred_class))"
+   ]
   },
   {
    "cell_type": "code",
